drawings of the electromagnetic SRR

--- a/result.tex
+++ b/result.tex
@@ -361,6 +361,18 @@ Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with a s
 \section{Combined electric and magnetic resonator} \label{section_srr} % references to -> 
 \paragraph{Effect of the central bar in SRR}
 The fundamental resonance of a split-ring resonator (SRR) is the magnetic one, where the current circulates around the circumference of the SRR. At higher frequencies, outside the range of Fig. \ref{fg_SRR_principles}, the SRR exhibits also the electric resonance where the current flows symmetrically along whole SRR.
+\begin{figure}[t] \caption{\textbf{(a)} \textbf{(b)} } \label{fg_slab_eps_scan} \centering 
+\begin{overpic}[height=0.2\textwidth]{img/drawing_SRRpad.pdf}\put (1,80) {\textbf{(a)}}\end{overpic}\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_sSRRpad.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_eSRRpad.pdf}\put (1,80) {\textbf{(c)}}\end{overpic}\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_sizes.pdf}\put (1,80) {\textbf{(d)}}\end{overpic}
+\end{figure}
+
+\begin{figure}[t] \caption{\textbf{(a)} \textbf{(b)} } \label{fg_slab_eps_scan} \centering 
+\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resM.pdf}\put (1,80) {\textbf{(a)}}\end{overpic}\quad\quad\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resE2.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}\quad\quad\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resE2b.pdf}\put (1,52) {\textbf{(c)}}\end{overpic}
+\end{figure}
 
 
 When one adds a central bar parallel to the electric field, i.e. along the $x$-axis, the frequency of the magnetic resonance does not change significantly. The reason is in that zero net current flows through the central bar due to the symmetry of magnetic resonance. However, a new electric resonance is introduced this way, in which the current conducted by the central bar has opposite direction than that conducted by both SRR arms. The corresponding frequency is lower compared to the original electric resonance, and similar to the frequency of the magnetic resonance.
