updated the CDH plots for sSRR with-without wire

--- a/result.tex
+++ b/result.tex
@@ -333,11 +333,11 @@ Comparison of the more familiar standard SRR (split width $d=4$ $\mu$m) with a s
 \end{tabular}
 \end{figure}
 %}}}
-\begin{figure}[h] \caption{Current-driven homogenization results  % for SRR%{{{
-	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} a wire mesh.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
+\begin{figure}[h] \caption{Current-driven homogenization results, shown as bubbles,  indicating the dispersion curves %{{{
+	for \textbf{(a)} a symmetric split-ring resonator and \textbf{(b)} the same a wire mesh.\\The results of the scattering-parameter method are overlayed as curves; these show the same data as the green and blue solid curves from Fig. \ref{fg_SRR_principles}c.} \label{fg_cdh5} \centering  % todo add params SRRArray_comment=symmetric SRR_simtime=2.000e-10_wirethick=0.000e+00_splitting2=1.600e-05_radius=3.000e-05_model=SRRArray.pdf
 	% TODO recalculate and update
 	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR.pdf}  \put(1,96) {\textbf{(a)}} \end{overpic}
-	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_Wire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
+	\begin{overpic}[width=.48\textwidth]{img-cdh/cdh_sSRR_wire.pdf}  \put(1,96) {\textbf{(b)}} \end{overpic}
 \end{figure}
 
 % todo possibly recalculate CDH for the SRR as in \ref{fg_SRR_principles}
@@ -370,7 +370,7 @@ The fundamental resonance of a split-ring resonator (SRR) is the magnetic one, w
 
 \begin{figure}[t] \caption{\textbf{(a)} \textbf{(b)} } \label{fg_slab_eps_scan} \centering 
 \begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resM.pdf}\put (1,80) {\textbf{(a)}}\end{overpic}\quad\quad\quad
-\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resE2.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}\quad\quad\quad
+\begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resE2.pdf}\put (1,80) {\textbf{(b)}}\end{overpic}\quad\quad
 \begin{overpic}[height=0.2\textwidth]{img/drawing_emcSRRpad_resE2b.pdf}\put (1,52) {\textbf{(c)}}\end{overpic}
 \end{figure}
 
